# nahual

./: README.md  flake.nix  pyproject.toml  readme.md  readme.org
examples/: baby.py  cellpose.py  dinov2.py  morphem.py  subcell.py  trackastra.py  vit.py
nix/: default.nix  nahual.nix
src/nahual/: preprocess.py  process.py  readme.md  serial.py  server.py  utils.py
src/nahual/client/: baby.py
tests/: test_dsatur.py  test_serialization.py
