[project]
name = "nahual" 
version = "0.0.1"
description = "Deploy and access image and data processing models via HTTPS."
authors = [{ name = "Alan Munoz" }]
requires-python = ">=3.10,<3.13"
readme = "README.md"
dependencies = [
  "requests"
]

[project.urls]
Homepage = "https://github.com/broadinstitute/monorepo/tree/main/libs/jump_babel"

[dependency-groups]
data = [
    "pooch>=1.7.0,<2",
]
dev = [
    "jupyter>=1.1.1",
    "jupytext>=1.17.2",
    "ruff>=0.1.15",
]
test = [
    "numpy>=2.2.6",
    "pytest>=8.4.0",
]

[tool.hatch.build.targets.sdist]
include = ["src/nahual"]

[tool.hatch.build.targets.wheel]
include = ["src/nahual"]

[tool.hatch.build.targets.wheel.sources]
"src/nahual" = "nahual" 

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

